tweaked header spacing && fixed nav bug

--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -68,18 +68,17 @@ h4 { font-size: 1rem; }
 	flex-wrap: wrap;
 	align-items: center;
 	height: 5rem;
-	padding: 1rem 6%;
+	padding: 1rem 8%;
 }
 
 .site-header-title {
 	font-size: 2.5rem;
-	margin-right: 32rem;
+	margin-right: 31rem;
 }
 
 .main-block {
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	min-height: 40rem;
 	padding: 20px 60px 30px;
 }
@@ -129,7 +128,7 @@ h4 { font-size: 1rem; }
 	display: flex;
 	align-items: center;
 	height: 4rem;
-	padding: 1rem 6%;
+	padding: 1rem 8%;
 }
 .site-footer-link {
 	margin-right: 2.4rem;
